# Openenv_ScaleR_Hackathon

./: Dockerfile  baseline_results.json  inference.py  pyproject.toml  verify_fix.py
pedestrian-negotiation-env/: .gitignore  Dockerfile  PROBLEM_STATEMENT.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
pedestrian-negotiation-env/app/: environment.py  graders.py  main.py
pedestrian-negotiation-env/baseline/: run_baseline.py
pedestrian-negotiation-env/server/: app.py
pedestrian-negotiation-env/tests/: test_environment.py
server/: app.py
