[project]
name = "pedestrian-negotiation-root"
version = "1.0.0"
description = "Root OpenEnv wrapper for the pedestrian negotiation benchmark."
readme = "pedestrian-negotiation-env/README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai==2.30.0",
    "httpx==0.27.2",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
